# menubox

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff_defaults.toml
docs/: changelog.md
docs/examples/: Filesystem.ipynb
settings/mbp/: main_v1.yaml
settings/mbp/main_v1/: df.parquet
src/menubox/: __about__.py  __init__.py  _autostart.py  async_run_button.py  children_setter.py  css.py  defaults.py  filesystem.py  hashome.py  hasparent.py  home.py  hookspecs.py  instance.py  instancehp_tuple.py  lib.py  log.py  mb_async.py  menubox.py  menuboxvt.py  modalbox.py  pack.py  persist.py  repository.py  shuffle.py  stylesheet.py  synchronise.py  trait_factory.py  trait_types.py  utils.py  valuetraits.py  widget_loader.py  widgets.py
src/menubox/templates/: readme.md
tests/: conftest.py  test_async_run_button.py  test_children_setter.py  test_default.py  test_filesystem.py  test_hashome.py  test_hashomes.py  test_hasparent.py  test_home.py  test_instance.py  test_instancehptuple.py  test_instancehptuple_persist.py  test_mb_async.py  test_menubox.py  test_menubox_gc.py  test_menuboxvt.py  test_modal_button.py  test_pack.py  test_persist.py  test_repository.py  test_shuffle.py  test_trait_factory.py  test_trait_types.py  test_typedinstancetuple.py  test_typedinstancetuple_persist.py  test_utils.py  test_valuetraits.py  test_widgets.py
tests/__pycache__/: test_valuetraits.cpython-313-pytest-9.0.3.pyc.24844
tests/templates/MyNewObj/: demo template 1.json  demo template 2.yaml
