[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "menubox"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ['LICENSE']
keywords = []
authors = [{name = "Alan Fleming", email = "async-python@proton.me"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
  "IPython>8.17.1",
  "numpy",
  "pandas",
  "toolz",
  "traitlets>=5.14.3",
  "wrapt>=1.15.0",
  "fsspec>=2023.9.2",
  "orjson>=3.9.14",
  "ruamel.yaml>=0.18.6",
  "mergedeep",
  "psutil",
  "pyarrow",
  "docstring_to_markdown",
  "aiologic>=0.15.0",
   "anyio",
  "async-kernel>=0.11,<0.12",
  "ipylab @ https://github.com/fleming79/ipylab/releases/download/v2.0.10/ipylab-2.0.10-py3-none-any.whl#sha256:2248e97d5c4c1f5af739ddb90614bbcb21f7814f896bca3737c20632e2d6c746"
]
[dependency-groups]
dev =[
  "hatch",
  "ruff",
  "pytest-cov >= 6",
  "pytest >= 8.3",
  "pre-commit",
  "pytest-mock",
    "basedpyright",
  "pandas-stubs",
]

[project.urls]
Documentation = "https://github.com/fleming79/menubox#readme"
Issues = "https://github.com/fleming79/menubox/issues"
Source = "https://github.com/fleming79/menubox"

[tool.hatch.version]
path = "src/menubox/__about__.py"


[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
log_cli_level =  "INFO"
addopts = [
  "-raXs", "--durations=10", "--color=yes",
   "--showlocals", "--strict-markers", "--strict-config",
]

[tool.hatch.metadata]
allow-direct-references = true



[tool.coverage.run]
branch = true
parallel = true

filterwarnings = ["error", "ignore::UserWarning"]
[tool.ruff]
target-version = "py312"


[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "F",        # Pyflakes
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PERF",     # Perflint
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PLR",      # Refactor
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "TRY",      # tryceratops
  "FURB",     # Refurb
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PYI",      # flake8-pyi
  "TC",       # flake8-type-checking
]
ignore = [
  "PLR",    # Design related pylint codes
  "B027", # Allow non-abstract empty methods in abstract base classes
  "T201", # `print` found
  "SIM105", # Use `contextlib.suppress(ValueError)` instead of try-except-pass
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "ARG001", # Unused function argument
  "ARG002",  # Unused method argument
  "PTH123", # `open()` should be replaced by `Path.open()`
  "UP031", # Use format specifiers instead of percent format
  "UP046", # Generic
  "PT023", # Use `@pytest.mark.skip` over `@pytest.mark.skip()`
  # "PGH003",
  "PLC0415", # Import should be at top of file.
  "G004", # Logging statement uses f-string
]
[tool.ruff.format]
docstring-code-format = true

[tool.codespell]
write = true
skip = "__py_cache__,dist,.gitignore"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = 'standard'
