[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "menubox"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ['LICENSE']
keywords = []
authors = [{name = "Alan Fleming", email = "async-python@proton.me"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
  "IPython>8.17.1",
  "numpy",
  "pandas",
  "toolz",
  "traitlets>=5.14.3",
  "wrapt>=1.15.0",
  "fsspec>=2023.9.2",
  "orjson>=3.9.14",
  "ruamel.yaml>=0.18.6",
  "mergedeep",
  "psutil",
  "pyarrow",
  "docstring_to_markdown",
  "aiologic>=0.15.0",
   "anyio",
  "async-kernel>=0.12,<0.13",
  "ipylab @ https://github.com/fleming79/ipylab/releases/download/v2.0.12/ipylab-2.0.12-py3-none-any.whl#sha256:51026656fe5c9b539d23651581c63dcdb61896c552449828edfd059e324ae14b"
]
[dependency-groups]
dev =[
  "hatch",
  "ruff",
  "pytest-cov >= 6",
  "pytest >= 8.3",
  "pre-commit",
  "pytest-mock",
  "pandas-stubs",
]

[project.urls]
Documentation = "https://github.com/fleming79/menubox#readme"
Issues = "https://github.com/fleming79/menubox/issues"
Source = "https://github.com/fleming79/menubox"

[tool.hatch.version]
path = "src/menubox/__about__.py"


[tool.pytest.ini_options]
minversion = "8.3"
xfail_strict = true
log_cli_level =  "INFO"
addopts = [
  "-raXs", "--durations=10", "--color=yes",
   "--showlocals", "--strict-markers", "--strict-config",
]

[tool.hatch.metadata]
allow-direct-references = true



[tool.coverage.run]
branch = true
parallel = true

filterwarnings = ["error", "ignore::UserWarning"]
[tool.ruff]

line-length = 120

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "F",        # Pyflakes
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PERF",     # Perflint
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PLR",      # Refactor
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "TRY",      # tryceratops
  "FURB",     # Refurb
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PYI",      # flake8-pyi
  "TC",       # flake8-type-checking
]
ignore = [
  "PLR",    # Design related pylint codes
  "B027", # Allow non-abstract empty methods in abstract base classes
  "SIM105", # Use `contextlib.suppress(ValueError)` instead of try-except-pass
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "ARG001", # Unused function argument
  "ARG002",  # Unused method argument
  "PTH123", # `open()` should be replaced by `Path.open()`
  "UP031", # Use format specifiers instead of percent format
  "UP046", # non-pep695-generic-class
  "PLC0415", # Import should be at top of file.
  "G004", # Logging statement uses f-string
]
[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.codespell]
write = true
skip = "__py_cache__,dist,.gitignore"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = 'standard'
